# Samples for the STL container chapter
# -------------------------------------
ADD_SUBDIRECTORY(InliningNodeHidden)
ADD_SUBDIRECTORY(InliningNodeVisible)
ADD_SUBDIRECTORY(IteratorConversion)
ADD_SUBDIRECTORY(IteratorInheritance)
ADD_SUBDIRECTORY(STLIteratorInheritance)
ADD_SUBDIRECTORY(STLIteratorTypedefs)
ADD_SUBDIRECTORY(TemplateFriendComparisons)
ADD_SUBDIRECTORY(TemplateMemberComparisons)
